SynProdGITV1/force-app/main/default/objects/Account_Plan_Competitors__c/Account_Plan_Competitors__c.object-meta.xml
<CustomObject>
    <description>Account Plan Competitors visible in Account Plan</description>
    <label>Account Plan Competitor</label>
    <nameField>
        <displayFormat>A-{000000000}</displayFormat>
        <label>Account Plan Competitors Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Account Plan Competitors</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>