SynProdGITV1/force-app/main/default/objects/Account_Plan_Competitors__c/fields/Account_Competitor_Ext_ID__c.field-meta.xml
<CustomField>
    <fullName>Account_Competitor_Ext_ID__c</fullName>
    <description>Account Competitor External ID - Customer ID 
(this is non-mandatory as it will be only used for Data migration)</description>
    <externalId>true</externalId>
    <inlineHelpText>Account Competitor External ID - Customer ID</inlineHelpText>
    <label>Account Competitor Ext ID</label>
    <length>25</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>