SynProdGITV1/force-app/main/default/objects/Account_Plan_Competitors__c/fields/Account_Plan__c.field-meta.xml
<CustomField>
    <fullName>Account_Plan__c</fullName>
    <description>This field is created for Master detail relationship with Account Plan</description>
    <label>Account Plan</label>
    <referenceTo>AccountPlan</referenceTo>
    <relationshipName>Account_Competitors</relationshipName>
    <relationshipOrder>1</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>